--- a/web/emojivoto-web-configmap.yaml
+++ b/web/emojivoto-web-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  EMOJISVC_HOST: emoji-tidlor.odde-poc:8081
+  EMOJISVC_HOST: emoji-tidlor:8081
   INDEX_BUNDLE: dist/index_bundle.js
   VOTINGSVC_HOST: emojivoto-voting:8082
   WEB_PORT: "8080"
