--- a/web/emojivoto-web-ingress.yaml
+++ b/web/emojivoto-web-ingress.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: emojivoto.odd.works
+    http:
       paths:
       - backend:
           service:
